--- a/src/components/NavBar/navstyle.css
+++ b/src/components/NavBar/navstyle.css
@@ -1,17 +1,24 @@
 /* navstyle.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Baskervville:ital,wght@0,400..700;1,400..700&family=Libertinus+Serif:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playwrite+IT+Moderna:wght@100..400&family=Raleway:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap');
+
 .nav {
     background-color: transparent;
     border-radius: 5rem;
     margin: 0.5rem;
+    box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.7); 
+
+    
 }
 
 .my-typography {
     flex-grow: 1;
     color: black;
-    font-size: 1.5rem;
+    font-size: 2rem !important;
     font-weight: bold;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Story Script", cursive !important;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 }
 .ul {
     list-style-type: none;
@@ -22,6 +29,7 @@
 }
 .li {
     float: left;
+
 }
 
 .link {
@@ -45,4 +53,3 @@
     border-radius: 1rem;
     animation: bounce 0.5s;
 }
-
