--- a/src/components/NavBar/navstyle.css
+++ b/src/components/NavBar/navstyle.css
@@ -6,18 +6,20 @@
     background-color: transparent;
     border-radius: 5rem;
     margin: 0.5rem;
-    box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 0.7); 
 
     
 }
 
 .my-typography {
-    flex-grow: 1;
+    display: flex;
     color: black;
     font-size: 2rem !important;
     font-weight: bold;
     text-align: center;
     font-family: "Story Script", cursive !important;
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.7);  
+
     /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
 }
 .ul {
