--- a/src/components/JournalList/list.css
+++ b/src/components/JournalList/list.css
@@ -28,13 +28,12 @@
 }
 
 .journal-list {
-
-    margin: 0;
+    margin-top: 4rem;
     padding: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap: var(--list-gap);
-    width: 100%;
+    width: auto;
 }
 
 .journal-item {
